<resources>
    <string name="app_name">PIapp</string>
    <string name="algoritmos">Algoritmos de Control</string>
    <string name="proporcional">Accion Proporcional</string>
    <string name="velocidad">Velocidad de Referencia(rpm)</string>
    <string name="constante">Ganancia Proporcional</string>
    <string name="tiempo">T.Integral(s-1)</string>
    <string name="integral">Accion Integral</string>
    <string name="imposible_to_connect">Imposible conectar con el dispositivo</string>
    <string name="lost_connection">Pérdida conexión con el dispositivo</string>
    <string name="scanning">Escaneando...</string>
    <string name="seleccionar_dispositivo">Seleccione un dispositivo para conectarse</string>
    <string name="no_emparejados">Ningun dispositivo ha sido emparejado</string>
    <string name="no_encontrado">No se ha encontrado ningun dispositivo</string>
    <string name="other_devices">Otros dispositivos disponibles</string>
    <string name="dencontrados">Dispositivos encontrados:</string>
    <string name="demparejados">Dispositivos emparejados:</string>
    <string name="no_vel">Introduzca una velocidad valida</string>
    <string name="no_kp">Introduzca una constante valida</string>
    <string name="no_kpi">Introduzca una constante valida</string>
    <string name="no_t">Introduzca un tiempo valido</string>
    <string name="velocidadIncorrecta">Velocidad entre 0 y 255</string>
    <string name="kPincorrecta">Constante K entre 0 y 255</string>
    <string name="kPIincorrecta">Constante K entre 0 y 255</string>
    <string name="tiempoIncorrecta">Tiempo entre 0 y 255</string>
    <string name="encoderNoDefinido">No se han recibido ningún valor del encoder.</string>
    <string name="bluetoothNoConectado">Ningún dispositivo Bluetooth conectado.</string>

    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_graphics">Graficas</string>
    <string name="menu_info">Info</string>

    <string name="no_conectado">No conectado</string>
    <string name="conectando_con">Conectando con %s …</string>
    <string name="conectado_a">Conectado a</string>
    <string name="menu_atras">Atras</string>

    <string name="about">Acerca de PIapp</string>
    <string name="author">Autor</string>
    <string name="tutor">Tutor</string>
    <string name="license">Licencia</string>
    <string name="version">Version</string>


</resources>
