<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controlador.MainActivity">


    <!--VELOCIDAD DE REFERENCIA PARA AMBOS ALGORITMOS -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"></TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/velocidad"
            android:id="@+id/lblVelocidad" />

        <EditText
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:id="@+id/txtVelocidad" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"></TableRow>

    <!--Eleccion de algoritmo -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/RoyalBlue"
        android:textStyle="bold"
        android:text="@string/algoritmos"
        android:textSize="20sp"
        android:id="@+id/lblAlgoritmos"/>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"></TableRow>

    <RadioGroup android:id="@+id/GrbGrupo1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="elegirAlgoritmo"
            android:text="@string/proporcional"
            android:id="@+id/rdProporcional"
            android:checked="true"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/constante"
                android:id="@+id/lblConstanteP" />

            <EditText
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:id="@+id/txtConstanteP" />
        </LinearLayout>



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral"
            android:onClick="elegirAlgoritmo"
            android:id="@+id/rdIntegral" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/constante"
                android:id="@+id/lblConstantePI" />

            <EditText
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:maxLength="3"
                android:id="@+id/txtConstantePI" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tiempo"
                android:id="@+id/lblTiempo" />

            <EditText
                android:layout_width="40sp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:enabled="false"
                android:maxLength="3"
                android:id="@+id/txtTiempo" />

        </LinearLayout>
    </RadioGroup>

    <!--PLAY & STOP -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/icons_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".controlador.MainActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:id="@+id/play"
            android:text="@string/fa_play" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:id="@+id/stop"
            android:text="@string/fa_stop" />

    </LinearLayout>

</LinearLayout>
